<resources>
    <string name="app_name">Register</string>
    <string name="action_settings">Settings</string>
    <string name="lblName">Nombre</string>
    <string name="lblValue">Valor</string>
    <string name="btnInsert">Ins</string>
    <string name="btnUpdate">Upd</string>
    <string name="btnDelete">Del</string>
    <string name="btnGetValue">Consultar valor</string>
    <string name="btnListByName">x nombre</string>
    <string name="btnListByValue">x valor</string>
</resources>
