<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/lblName"/>
        <EditText android:id="@+id/TxtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/lblValue"/>
        <EditText android:id="@+id/TxtValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:inputType="numberDecimal"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/BtnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/btnInsert"
            android:onClick="onBtnInsertClick"/>

        <Button android:id="@+id/BtnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/btnUpdate"
            android:onClick="onBtnUpdateClick"/>

        <Button android:id="@+id/BtnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/btnDelete"
            android:onClick="onBtnDeleteClick"/>

    </LinearLayout>

    <Button android:id="@+id/BtnGetValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGetValue"
        android:onClick="onBtnGetValueClick"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/BtnListByName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btnListByName"
            android:onClick="onBtnListByNameClick"/>

        <Button android:id="@+id/BtnListByValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btnListByValue"
            android:onClick="onBtnListByValueClick"/>

    </LinearLayout>

    <EditText android:id="@+id/TxtRegisters"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:enabled="false"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

</LinearLayout>
